# VectorEditor

./: CMakeLists.txt  directoryHelper.txt
include/commands/: add_shape.h  command.h  cut.h  delete.h  move.h  paste.h  property_change.h
include/gui/: canvas.h  color_spectrum_widget.h  main_window.h  property_panel.h  selection_handle.h
include/io/: svg_writer.h  xml_parser.h
include/model/: circle.h  freehand.h  graphics_object.h  hexagon.h  line.h  rect.h  text.h
src/: main.cpp
src/commands/: add_shape.cpp  command.cpp  cut.cpp  delete.cpp  move.cpp  paste.cpp  property_change.cpp
src/gui/: canvas.cpp  color_spectrum_widget.cpp  main_window.cpp  property_panel.cpp  selection_handle.cpp
src/gui/canvas/: canvas.cpp
src/gui/canvas/commands/: bring_to_front.cpp  copy.cpp  cut.cpp  delete_shapes.cpp  others.cpp  paste.cpp  send_to_back.cpp
src/gui/canvas/key_press_event/: key_press_event.cpp
src/gui/canvas/mouse_events/: mouse_double_click_event.cpp  mouse_move_event.cpp  mouse_press_event.cpp  mouse_release_event.cpp  wheel_event.cpp
src/gui/canvas/shape_organizer/: shape_organizer.cpp
src/gui/canvas/undo_redo_handle/: undo_redo.cpp
src/gui/color_spectrum_widget/: color_spectrum_widget.cpp  mouse_events.cpp  setup.cpp
src/gui/main_window/: commands.cpp  connections.cpp  main_window.cpp  other_functions.cpp
src/gui/property_panel/: circle_connections.cpp  color_section.cpp  hex_connections.cpp  property_panel.cpp  rectangle_connections.cpp  set_target.cpp  setup.cpp  text_connections.cpp
src/io/: svg_writer.cpp  xml_parser.cpp
src/model/: circle.cpp  freehand.cpp  graphics_object.cpp  hexagon.cpp  line.cpp  rect.cpp  text.cpp
src/model/functions/: clone.cpp  draw.cpp  get_position.cpp  move.cpp  to_svg.cpp
src/model/functions/resize/: circle.cpp  hexagon.cpp  line.cpp  rect.cpp  text.cpp
